--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "gulp": "^5.0.0",
     "gulp-sass": "^5.1.0",
+    "prettier": "3.2.5",
     "sass": "^1.76.0"
   },
   "dependencies": {
